# Pulse

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: auto-tag.yml  release.yml
src/: alerts.rs  client.rs  config.rs  error.rs  init.rs  main.rs  menubar.rs  poller.rs  state.rs  statusline.rs
