[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
description = "Statusbar alert count from Prometheus / Mimir"
homepage = "https://github.com/MikeLeonFox/Pulse"
repository = "https://github.com/MikeLeonFox/Pulse"
license = "MIT"
readme = "README.md"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "signal", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8"
dirs = "5"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
